--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,84 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --header-bg: #10375c;
+}
 html {
   font-size: 62.5%;
 }
 body {
   font-size: 1.6rem;
   font-family: "Sora", sans-serif;
+}
+/* ========================= common =================================== */
+.container {
+  width: 1170px;
+  margin: 0 auto;
+  max-width: calc(100% - 48px);
+}
+a {
+  text-decoration: none;
+}
+.btn {
+  display: inline-block;
+  min-width: 205px;
+  line-height: 60px;
+  background: #2e80ce;
+  color: #fff;
+  text-align: center;
+  font-size: 1.8rem;
+  border-radius: 999px;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+/* ========================= header =================================== */
+.header {
+  padding-top: 30px; /*-----chú ý-------*/
+  min-height: 100vh;
+  background: var(--header-bg);
+}
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
+.navbar__list {
+  display: flex;
+}
+.navbar__item {
+  padding: 8px 21px;
+}
+.action__login,
+.navbar__link {
+  color: #c9d2da;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75; /* 175% */
+}
+.navbar__link:hover,
+.navbar__link--active {
+  color: #fff;
+  text-shadow: 1px 0 0 #fff;
+}
+.navbar__link--active::before {
+  display: inline-block;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #fff;
+  position: relative;
+  right: 8px;
+  top: -3px;
+}
+.action__signup {
+  min-width: 144px;
+  line-height: 44px;
+  font-size: 1.6rem;
+}
+.action__login {
+  margin-right: 28px;
 }
