--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,3 +82,60 @@ a {
 .action__login {
   margin-right: 28px;
 }
+/* ========================= hero =================================== */
+.hero {
+  display: flex;
+  align-items: center;
+  padding-top: 76px;
+}
+.hero__content {
+  width: 44%;
+}
+.hero__heading {
+  color: #fff;
+  font-size: 7rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.14; /* 114.286% */
+}
+.hero__desc {
+  margin-top: 22px;
+  color: #c9d2da;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.67; /* 166.667% */
+}
+.hero__row {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+  column-gap: 38px;
+}
+.hero__phone {
+  color: #fff;
+  text-align: center;
+  font-size: 1.8rem;
+  line-height: 1.67; /* 166.667% */
+}
+.hero__media {
+  flex: 1;
+}
+.hero__images {
+  display: flex;
+  align-items: center;
+}
+.hero__img {
+  border-radius: 6px;
+  object-fit: cover;
+}
+.hero__img--large {
+  width: 330px;
+  height: 540px;
+  margin-right: -6px;
+  z-index: 1;
+}
+.hero__img--small {
+  width: 210px;
+  height: 410px;
+}
