--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,3 +422,92 @@ a {
   gap: 28px;
   margin-top: 38px;
 }
+/* ========================= blog news =================================== */
+
+.news {
+  padding: 85px 0;
+  background: #fff;
+}
+
+.news__inner {
+  display: flex;
+  justify-content: space-between;
+}
+.news__left {
+  width: 40%;
+}
+.news-item__heading {
+  max-width: 470px;
+}
+.news__more {
+  display: inline-block;
+  margin-top: 28px;
+  color: #10375c;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.56; /* 155.556% */
+  text-decoration-line: underline;
+  text-underline-offset: 5px;
+}
+.news__control {
+  margin-top: 28px;
+  justify-content: start;
+}
+.news__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 30px;
+}
+.news-item {
+  width: 270px;
+  height: 375px;
+  border-radius: 12px;
+  border: 1px solid #e8ebee;
+  background: #fff;
+  transition: 0.25s;
+}
+.news-item:hover {
+  background: #fff;
+  box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+  border-color: transparent;
+}
+.news-item:hover .news-item__thumb {
+  transform: scale(1.1);
+}
+.news-item__image {
+  height: 172px;
+  overflow: hidden;
+}
+.news-item__thumb {
+  width: 100%;
+  height: 172px;
+  border-radius: 12px 12px 0px 0px;
+  transition: 0.25s;
+}
+.news-item__body {
+  padding: 18px 22px;
+}
+.news-item__heading {
+  color: #10375c;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.62; /* 162.5% */
+}
+.news-item__desc {
+  margin-top: 10px;
+  color: #575f66;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.71; /* 171.429% */
+}
+.news-item__more {
+  display: inline-block;
+  margin-top: 12px;
+  color: #10375c;
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+.news-item__more:hover {
+  color: #2e80ce;
+}
